--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,14 +7,7 @@
 html {
   scroll-behavior: smooth;
 }
-body {
-  padding-top: 110px;
-}
 
 html, body{
-  overflow-x: hidden;
-}
-
-body{
   overflow-x: hidden;
 }
